# python_basic_project

./: README.md  mypy.ini  pyproject.toml
tests/: test_python_basic_project.py
